objects/Migration_Statistics__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Owner__c</fullName>
        <label>Activity Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Appirio</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Analysis_Code__c</fullName>
        <label>Analysis Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analysis_Result__c</fullName>
        <label>Analysis Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_Need_Releases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS Need Releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_OS_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS OS Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_OS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS OS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_ProdLevel2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS ProdLevel2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_Platform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cadence Platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Pct__c</fullName>
        <formula>(Created__c*100/Goal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>IMAGE(&quot;https://chart.googleapis.com/chart?cht=bhs&amp;chd=t:&quot; &amp; TEXT(Created__c*100/Goal__c) &amp; &quot;|100&amp;chs=100x20&amp;chco=6E9312,DEF3BD&quot;, TEXT(Created__c*100/Goal__c))</formula>
        <label>Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Migration_Intelligents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <label>Created</label>
        <summarizedField>Migration_Statistics_Line_Items__c.Created__c</summarizedField>
        <summaryForeignKey>Migration_Statistics_Line_Items__c.Migration_Statistics__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Issue__c</fullName>
        <label>Current Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution__c</fullName>
        <label>Execution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <formula>Goal__c - Created__c -Migration_Gap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Response__c</fullName>
        <label>Issue Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Count__c</fullName>
        <label># of Job Execution</label>
        <summaryForeignKey>Migration_Statistics_Line_Items__c.Migration_Statistics__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Middleware__c</fullName>
        <label>Middleware</label>
        <picklist>
            <picklistValues>
                <fullName>Data Loader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loader CLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jitterbit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Gap__c</fullName>
        <label>Migration Gap</label>
        <summarizedField>Migration_Error__c.Missing_Reference__c</summarizedField>
        <summaryForeignKey>Migration_Error__c.Migration_Statistics__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Migration_Intelligence_Master__c</fullName>
        <label>Migration Intelligence Master</label>
        <referenceTo>Migration_Intelligence_Master__c</referenceTo>
        <relationshipLabel>Migration Intelligences</relationshipLabel>
        <relationshipName>Migration_Intelligences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <externalId>true</externalId>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object</label>
        <referenceTo>Field_Trip__Object_Analysis__c</referenceTo>
        <relationshipName>Migration_Intelligents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Attribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Attribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Level_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Feature Level 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Level_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Feature Level 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Feature Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Price_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Price Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Field__c</fullName>
        <formula>IF( FALSE,
IMAGE(&quot;https://chart.googleapis.com/chart?cht=bhs&amp;chd=t:&quot; &amp; TEXT(Created__c * 100 / Goal__c) &amp; &quot;|&quot; &amp; TEXT(Failed__c* 100 / Goal__c) &amp; &quot;|&quot; &amp; TEXT(Migration_Gap__c * 100 / Goal__c) &amp; &quot;&amp;chs=100x20&amp;chco=00FF00,FF0000,0000FF&quot;, &quot;Report Field&quot;),
IMAGE(&quot;https://chart.googleapis.com/chart?cht=p3&amp;chs=200x65&amp;&amp;chd=t:&quot; &amp; TEXT(Created__c * 100 / Goal__c) &amp; &quot;,&quot; &amp; TEXT(Failed__c* 100 / Goal__c) &amp; &quot;,&quot; &amp; TEXT(Migration_Gap__c * 100 / Goal__c) &amp; &quot;&amp;chco=6E9312,819FF7,F4FA58&amp;chl=Success|Failed|Gap&quot;, &quot;Report Field&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <color>#DDDDDD</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on someone else</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
                <color>#000000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deprecated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_in_Minutes__c</fullName>
        <description>Total execution time in minutes</description>
        <label>Time in Minutes</label>
        <summarizedField>Migration_Statistics_Line_Items__c.Time__c</summarizedField>
        <summaryForeignKey>Migration_Statistics_Line_Items__c.Migration_Statistics__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <label>Updated</label>
        <summarizedField>Migration_Statistics_Line_Items__c.Updated__c</summarizedField>
        <summaryForeignKey>Migration_Statistics_Line_Items__c.Migration_Statistics__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User</label>
        <type>Checkbox</type>
    </fields>
    <label>Migration Intelligence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Job_Count__c</columns>
        <columns>Account__c</columns>
        <columns>Article__c</columns>
        <columns>Cadence_Platform__c</columns>
        <columns>Status__c</columns>
        <columns>Activity_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dependency</fullName>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Account__c</columns>
        <columns>CCR__c</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Price__c</columns>
        <columns>Product_Price_Type__c</columns>
        <columns>Product_Attribute__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Feature__c</columns>
        <columns>Release__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Dependency</label>
    </listViews>
    <listViews>
        <fullName>Deployment</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Execution__c</columns>
        <columns>Complete_Pct__c</columns>
        <columns>Data_Source__c</columns>
        <columns>Status__c</columns>
        <columns>Time_in_Minutes__c</columns>
        <columns>Activity_Owner__c</columns>
        <columns>Middleware__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Migration_Statistics__c.Migration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </filters>
        <label>Deployment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Issues</fullName>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Account__c</columns>
        <columns>CCR__c</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Price__c</columns>
        <columns>Product_Price_Type__c</columns>
        <columns>Product_Attribute__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Feature__c</columns>
        <columns>Release__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Migration_Statistics__c.Migration</value>
        </filters>
        <label>Issues</label>
    </listViews>
    <listViews>
        <fullName>Issues2</fullName>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Account__c</columns>
        <columns>CCR__c</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Price__c</columns>
        <columns>Product_Price_Type__c</columns>
        <columns>Product_Attribute__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Feature__c</columns>
        <columns>Release__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Migration_Statistics__c.Migration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Waiting on someone else</value>
        </filters>
        <label>Issues Pending on Customer</label>
    </listViews>
    <listViews>
        <fullName>Readiness</fullName>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Data_Source__c</columns>
        <columns>External_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Contributor__c</columns>
        <columns>Notes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Readiness</label>
    </listViews>
    <listViews>
        <fullName>Statistic</fullName>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Time_in_Minutes__c</columns>
        <columns>Report_Field__c</columns>
        <columns>Complete_Pct__c</columns>
        <columns>Goal__c</columns>
        <columns>Created__c</columns>
        <columns>Migration_Gap__c</columns>
        <columns>Failed__c</columns>
        <columns>Job_Count__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </filters>
        <label>Statistic</label>
    </listViews>
    <listViews>
        <fullName>Status</fullName>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Complete_Pct__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Issue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </filters>
        <label>Status</label>
    </listViews>
    <nameField>
        <label>Migration Intelligent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Intelligences</pluralLabel>
    <recordTypes>
        <fullName>Migration</fullName>
        <active>true</active>
        <label>Migration</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>